Enable multiple catalogs
