# src/app/openapi/api/api.ts
@@ -1,10 +1,16 @@
+export * from './catalog-descriptors.service';
+import { CatalogDescriptorsService } from './catalog-descriptors.service';
+export * from './catalog-descriptors.serviceInterface';
 export * from './catalog-filters.service';
 import { CatalogFiltersService } from './catalog-filters.service';
 export * from './catalog-filters.serviceInterface';
 export * from './catalog-items.service';
 import { CatalogItemsService } from './catalog-items.service';
 export * from './catalog-items.serviceInterface';
+export * from './catalogs.service';
+import { CatalogsService } from './catalogs.service';
+export * from './catalogs.serviceInterface';
 export * from './files.service';
 import { FilesService } from './files.service';
 export * from './files.serviceInterface';
-export const APIS = [CatalogFiltersService, CatalogItemsService, FilesService];
+export const APIS = [CatalogDescriptorsService, CatalogFiltersService, CatalogItemsService, CatalogsService, FilesService];
