# src/app/openapi/api/catalog-descriptors.serviceInterface.ts
@@ -1,0 +1,32 @@
+/**
+ * Component Catalog REST API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { HttpHeaders }                                       from '@angular/common/http';
+
+import { Observable }                                        from 'rxjs';
+
+import { CatalogDescriptor } from '../model/models';
+import { RestErrorMessage } from '../model/models';
+
+
+import { Configuration }                                     from '../configuration';
+
+
+
+export interface CatalogDescriptorsServiceInterface {
+    defaultHeaders: HttpHeaders;
+    configuration: Configuration;
+
+    /**
+     * List of all available Catalog Descriptors.
+     * Returns a list of all available Catalog Descriptors.&lt;br/&gt; 
+     */
+    getCatalogDescriptors(extraHttpRequestParams?: any): Observable<Array<CatalogDescriptor>>;
+
+}
