# src/app/openapi/api/catalogs.serviceInterface.ts
@@ -1,0 +1,33 @@
+/**
+ * Component Catalog REST API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { HttpHeaders }                                       from '@angular/common/http';
+
+import { Observable }                                        from 'rxjs';
+
+import { Catalog } from '../model/models';
+import { RestErrorMessage } from '../model/models';
+
+
+import { Configuration }                                     from '../configuration';
+
+
+
+export interface CatalogsServiceInterface {
+    defaultHeaders: HttpHeaders;
+    configuration: Configuration;
+
+    /**
+     * Get a catalog by id.
+     * Returns a valid catalog. 
+     * @param id id for the Catalog.
+     */
+    getCatalog(id: string, extraHttpRequestParams?: any): Observable<Catalog>;
+
+}
