# src/app/openapi/model/catalog-link.ts
@@ -1,0 +1,16 @@
+/**
+ * Component Catalog REST API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface CatalogLink { 
+    url?: string;
+    name?: string;
+}
+
